--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,10 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>net.woolgens.scaffold</groupId>
-    <artifactId>quarkus-scaffold-service</artifactId>
-    <version>1.0-SNAPSHOT</version>
+
+    <groupId>net.woolgens</groupId>
+    <artifactId>user-service</artifactId>
+    <version>1.0.0</version>
 
     <properties>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
@@ -39,6 +40,13 @@
         </dependencies>
     </dependencyManagement>
 
+    <repositories>
+        <repository>
+            <id>woolgens-network</id>
+            <url>https://nexus.woolgens.net/repository/woolgens/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -66,6 +74,14 @@
             <artifactId>rest-assured</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>net.woolgens</groupId>
+            <artifactId>api</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
