--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ quarkus.http.port=8089
 
 quarkus.mongodb.database=woolgens
 %prod.quarkus.mongodb.connection-string=mongodb://localhost:27017
+%test.quarkus.mongodb.connection-string=mongodb://mongo:27017
