Changed drone ping mongo connection, changed database name, renamed "NAME" tp "User" in index.html

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 quarkus.http.port=8089
 
-quarkus.mongodb.database=woolgens
+quarkus.mongodb.database=woolgens_network
 %prod.quarkus.mongodb.connection-string=mongodb://localhost:27017
 %test.quarkus.mongodb.connection-string=mongodb://mongo:27017
