--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
           username: woolgens-default
       serverSecrets:
         from_secret: MAVEN_SERVER_SECRETS
-  - name: ping mongodb
+  - name: test mongo connection
     image: mongo:4
     commands:
       - sleep 5
