--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ quarkus.mongodb.database=woolgens_network
 %prod.quarkus.mongodb.connection-string=mongodb://localhost:27017
 %test.quarkus.mongodb.connection-string=mongodb://mongo:27017
 %dev.quarkus.mongodb.connection-string=mongodb://root:XunDWZ8QH99euF47XhnebgfZSbJz8JZL@167.114.103.227:27017
+
+%prod.disable.authorization=false
+%test.disable.authorization=true
