Changed drone ( Added deployment )

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,13 @@
 ---
 kind: pipeline
 type: docker
-name: Java Maven Test
+name: Java maven testing
 
 trigger:
   branch:
     - master
+  event:
+    - pull_request
 
 steps:
   - name: settings
@@ -16,17 +18,73 @@ steps:
           username: woolgens-default
       serverSecrets:
         from_secret: MAVEN_SERVER_SECRETS
-  - name: test mongo connection
-    image: mongo:4
-    depends_on: [mongo]
-    commands:
-      - sleep 5
-      - mongo --host mongo --eval "db.version()"
-  - name: testing
+  - name: test
     image: maven
-    depends_on: [settings]
+    depends_on: [settings, mongo]
     commands:
       - mvn -U test -s settings.xml
+
+services:
+  - name: mongo
+    image: mongo:4
+    ports:
+      - 27017
+---
+kind: pipeline
+type: docker
+name: Java maven testing and server deployment
+
+trigger:
+  branch:
+    - master
+  event:
+    - push
+
+steps:
+  - name: settings
+    image: md5lukas/drone-mvn-settings
+    settings:
+      servers:
+        - id: woolgens-network
+          username: woolgens-default
+      serverSecrets:
+        from_secret: MAVEN_SERVER_SECRETS
+  - name: install
+    image: maven
+    depends_on: [settings, mongo]
+    commands:
+      - mvn -U package -s settings.xml
+  - name: deploy
+    depends_on: [install]
+    image: appleboy/drone-scp
+    settings:
+      host:
+        from_secret: SERVER_HOST
+      port:
+        from_secret: SERVER_PORT
+      username:
+        from_secret: SERVER_USER
+      password:
+        from_secret: SERVER_PASSWORD
+      target: /home/services/revamp/user-service/app/
+      source: target/quarkus-app/*
+      strip_components: 2
+  - name: start
+    depends_on: [deploy]
+    image: appleboy/drone-ssh
+    settings:
+      host:
+        from_secret: SERVER_HOST
+      port:
+        from_secret: SERVER_PORT
+      username:
+        from_secret: SERVER_USER
+      password:
+        from_secret: SERVER_PASSWORD
+      script:
+        - cd /home/services/revamp/user-service/
+        - docker-compose down
+        - docker-compose up -d --build
 
 services:
   - name: mongo
