--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ quarkus.mongodb.database=woolgens_network
 
 %prod.disable.authorization=false
 %test.disable.authorization=true
+
+quarkus.http.cors=true
