--- a/.drone.yml
+++ b/.drone.yml
@@ -17,7 +17,7 @@ steps:
         - id: woolgens-network
           username: woolgens-default
       serverSecrets:
-        from_secret: MAVEN_SERVER_SECRETS
+        from_secret: WOOLGENS_NEXUS_CREDENTIALS
   - name: test
     image: maven
     depends_on: [settings, mongo]
@@ -48,7 +48,7 @@ steps:
         - id: woolgens-network
           username: woolgens-default
       serverSecrets:
-        from_secret: MAVEN_SERVER_SECRETS
+        from_secret: WOOLGENS_NEXUS_CREDENTIALS
   - name: install
     image: maven
     depends_on: [settings, mongo]
@@ -59,13 +59,13 @@ steps:
     image: appleboy/drone-scp
     settings:
       host:
-        from_secret: SERVER_HOST
+        from_secret: WOOLGENS_SERVER_HOST
       port:
-        from_secret: SERVER_PORT
+        from_secret: WOOLGENS_SERVER_PORT
       username:
-        from_secret: SERVER_USER
+        from_secret: WOOLGENS_SERVER_USER
       password:
-        from_secret: SERVER_PASSWORD
+        from_secret: WOOLGENS_SERVER_PASSWORD
       target: /home/services/revamp/user-service/app/
       source: target/quarkus-app/*
       strip_components: 2
@@ -74,13 +74,13 @@ steps:
     image: appleboy/drone-ssh
     settings:
       host:
-        from_secret: SERVER_HOST
+        from_secret: WOOLGENS_SERVER_HOST
       port:
-        from_secret: SERVER_PORT
+        from_secret: WOOLGENS_SERVER_PORT
       username:
-        from_secret: SERVER_USER
+        from_secret: WOOLGENS_SERVER_USER
       password:
-        from_secret: SERVER_PASSWORD
+        from_secret: WOOLGENS_SERVER_PASSWORD
       script:
         - cd /home/services/revamp/user-service/
         - docker-compose down
