--- a/.drone.yml
+++ b/.drone.yml
@@ -45,8 +45,8 @@ steps:
     image: md5lukas/drone-mvn-settings
     settings:
       servers:
-        - id: woolgens-network
-          username: woolgens-default
+        - id: woolgens
+          username: woolgens
       serverSecrets:
         from_secret: WOOLGENS_NEXUS_CREDENTIALS
   - name: install
@@ -66,7 +66,7 @@ steps:
         from_secret: WOOLGENS_SERVER_USER
       password:
         from_secret: WOOLGENS_SERVER_PASSWORD
-      target: /home/services/revamp/user-service/app/
+      target: /home/services/user-service/app/
       source: target/quarkus-app/*
       strip_components: 2
   - name: start
@@ -82,7 +82,7 @@ steps:
       password:
         from_secret: WOOLGENS_SERVER_PASSWORD
       script:
-        - cd /home/services/revamp/user-service/
+        - cd /home/services/user-service/
         - docker-compose down
         - docker-compose up -d --build
 
