--- a/.drone.yml
+++ b/.drone.yml
@@ -105,7 +105,7 @@ steps:
       script:
         - cd /home/services/$${SERVICE_NAME}-service/
         - docker-compose down
-        - docker-compose up -d --build
+        - SERVICE_NAME=$${SERVICE_NAME} docker-compose up -d --build
 
 services:
   - name: mongo
