--- a/.drone.yml
+++ b/.drone.yml
@@ -29,10 +29,15 @@ services:
     image: mongo:4
     ports:
       - 27017
+
+
 ---
 kind: pipeline
 type: docker
 name: Java maven testing and server deployment
+
+environment:
+  SERVICE_NAME: user
 
 trigger:
   branch:
@@ -54,8 +59,22 @@ steps:
     depends_on: [settings, mongo]
     commands:
       - mvn -U package -s settings.xml
+  - name: delete
+    image: appleboy/drone-ssh
+    settings:
+      host:
+        from_secret: WOOLGENS_SERVER_HOST
+      port:
+        from_secret: WOOLGENS_SERVER_PORT
+      username:
+        from_secret: WOOLGENS_SERVER_USER
+      password:
+        from_secret: WOOLGENS_SERVER_PASSWORD
+      script:
+        - rm -R /home/services/$${SERVICE_NAME}-service/
+        - cp /home/services/template/ /home/services/$${SERVICE_NAME}-service/
   - name: deploy
-    depends_on: [install]
+    depends_on: [install, delete]
     image: appleboy/drone-scp
     settings:
       host:
@@ -66,7 +85,7 @@ steps:
         from_secret: WOOLGENS_SERVER_USER
       password:
         from_secret: WOOLGENS_SERVER_PASSWORD
-      target: /home/services/user-service/app/
+      target: /home/services/$${SERVICE_NAME}-service/app/
       source: target/quarkus-app/*
       strip_components: 2
   - name: start
@@ -82,9 +101,9 @@ steps:
       password:
         from_secret: WOOLGENS_SERVER_PASSWORD
       script:
-        - cd /home/services/user-service/
+        - cd /home/services/$${SERVICE_NAME}-service/
         - docker-compose down
-        - docker-compose up -d --build
+        - SERVICE_NAME=$${SERVICE_NAME} docker-compose up -d --build
 
 services:
   - name: mongo
