Enhancing drone file

--- a/.drone.yml
+++ b/.drone.yml
@@ -36,9 +36,6 @@ kind: pipeline
 type: docker
 name: Java maven testing and server deployment
 
-environment:
-  SERVICE_NAME: user
-
 trigger:
   branch:
     - master
@@ -71,12 +68,8 @@ steps:
       password:
         from_secret: WOOLGENS_SERVER_PASSWORD
       script:
-        - export SERVICE_NAME=user
-        - echo $${SERVICE_NAME}
-        - echo $SERVICE_NAME
-        - echo $$SERVICE_NAME
-        - rm -R /home/services/$${SERVICE_NAME}-service/
-        - cp /home/services/template/ /home/services/$${SERVICE_NAME}-service/
+        - rm -R /home/services/user-service/
+        - cp -r /home/services/template/ /home/services/user-service/
   - name: deploy
     depends_on: [install, delete]
     image: appleboy/drone-scp
@@ -89,7 +82,7 @@ steps:
         from_secret: WOOLGENS_SERVER_USER
       password:
         from_secret: WOOLGENS_SERVER_PASSWORD
-      target: /home/services/$$SERVICE_NAME-service/app/
+      target: /home/services/user-service/app/
       source: target/quarkus-app/*
       strip_components: 2
   - name: start
@@ -105,10 +98,9 @@ steps:
       password:
         from_secret: WOOLGENS_SERVER_PASSWORD
       script:
-        - export SERVICE_NAME=$SERVICE_NAME
-        - cd /home/services/$$SERVICE_NAME-service/
+        - cd /home/services/user-service/
         - docker-compose down
-        - SERVICE_NAME=$${SERVICE_NAME} docker-compose up -d --build
+        - SERVICE_NAME=user docker-compose up -d --build
 
 services:
   - name: mongo
