--- a/.drone.yml
+++ b/.drone.yml
@@ -101,7 +101,7 @@ steps:
         - SERVICE_NAME
       script:
         - cd /home/services/user-service/
-        - SERVICE_NAME=user
+        - export SERVICE_NAME=user
         - docker-compose down
         - docker-compose up -d --build
 
