--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,9 @@
 quarkus.mongodb.database=woolgens_network
-%prod.quarkus.mongodb.connection-string=mongodb://root:XunDWZ8QH99euF47XhnebgfZSbJz8JZL@167.114.103.227:27017
 %test.quarkus.mongodb.connection-string=mongodb://mongo:27017
-%dev.quarkus.mongodb.connection-string=mongodb://root:XunDWZ8QH99euF47XhnebgfZSbJz8JZL@167.114.103.227:27017
 
-quarkus.cache.caffeine."user-small".expire-after-write=30M
+quarkus.cache.caffeine."user-small".expire-after-write=5M
 
-%prod.disable.authorization=false
-%test.disable.authorization=true
+%prod.woolgens.disable.authorization=false
+%test.woolgens.disable.authorization=true
 
 quarkus.http.cors=true
